Prevent overflow when elements have no-doc-scroll class

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root:has(.no-doc-scroll) {
+  overflow: hidden;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #000;
